k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdas
  namespace: rdas
  labels:
    app.kubernetes.io/name: rdas
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rdas
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
